# cervisia-conversion

./: CMakeLists.txt  COPYING  ChangeLog  Makefile.am  addremovedlg.cpp  addremovedlg.h  addrepositorydlg.cpp  addrepositorydlg.h  annotate_info.h  annotate_parser.cpp  annotate_parser.h  annotatectl.cpp  annotatectl.h  annotatedlg.cpp  annotatedlg.h  annotateview.cpp  annotateview.h  cervisia.1.in  cervisia.pod  cervisia.upd  cervisiapart.cpp  cervisiapart.h  cervisiapart.kcfg  cervisiashell.cpp  cervisiashell.h  cervisiaui.rc  changelogdlg.cpp  changelogdlg.h  checkoutdlg.cpp  checkoutdlg.h  checkoutwidgetbase.cpp  checkoutwidgetbase.h  commandbase.cpp  commandbase.h  commitdlg.cpp  commitdlg.h  cvsdir.cpp  cvsdir.h  cvsinitdlg.cpp  cvsinitdlg.h  (+94 more)
cvsservice/: CMakeLists.txt  DESIGN  cvsaskpass.cpp  cvsjob.cpp  cvsjob.h  cvsloginjob.cpp  cvsloginjob.h  cvsservice.cpp  cvsservice.h  cvsserviceutils.cpp  cvsserviceutils.h  main.cpp  repository.cpp  repository.h  sshagent.cpp  sshagent.h
doc/: CMakeLists.txt
pics/: CMakeLists.txt
plugins/: CMakeLists.txt  Makefile.am
plugins/cvsplugin/: CMakeLists.txt  Makefile.am  addcommand.cpp  addcommand.h  addwatchcommand.cpp  addwatchcommand.h  annotatecommand.cpp  annotatecommand.h  checkoutcommand.cpp  checkoutcommand.h  checkoutwidget.cpp  checkoutwidget.h  commitcommand.cpp  commitcommand.h  createpatchcommand.cpp  createpatchcommand.h  createtagcommand.cpp  createtagcommand.h  cvs_annotate_parser.cpp  cvs_annotate_parser.h  cvs_log_parser.cpp  cvs_log_parser.h  cvs_update_parser.cpp  cvs_update_parser.h  cvscommandbase.cpp  cvscommandbase.h  cvsjob.cpp  cvsjob.h  cvsplugin.cpp  cvsplugin.h  cvsplugin.kcfg  cvsplugin.rc  cvspluginsettings.kcfgc  deletetagcommand.cpp  deletetagcommand.h  diffcommand.cpp  diffcommand.h  dirignorelist.cpp  dirignorelist.h  editcommand.cpp  (+26 more)
plugins/svnplugin/: CMakeLists.txt  Makefile.am  addcommand.cpp  addcommand.h  annotatecommand.cpp  annotatecommand.h  checkoutcommand.cpp  checkoutcommand.h  checkoutwidget.cpp  checkoutwidget.h  commitcommand.cpp  commitcommand.h  diffcommand.cpp  diffcommand.h  externaldiffcommand.cpp  externaldiffcommand.h  globalignorelist.cpp  globalignorelist.h  logcommand.cpp  logcommand.h  removecommand.cpp  removecommand.h  svn_annotate_parser.cpp  svn_annotate_parser.h  svn_log_parser.cpp  svn_log_parser.h  svn_update_parser.cpp  svn_update_parser.h  svncommandbase.cpp  svncommandbase.h  svnjob.cpp  svnjob.h  svnplugin.cpp  svnplugin.desktop  svnplugin.h  svnplugin.kcfg  svnplugin.rc  svnpluginsettings.kcfgc  updatecommand.cpp  updatecommand.h  (+3 more)
svnservice/: CMakeLists.txt  main.cpp  svnjob.cpp  svnjob.h  svnrepository.cpp  svnrepository.h  svnservice.cpp  svnservice.h
tests/: create_cvs_test.sh  create_svn_test.sh
